test(User): add /GET one user test
