# src/Routes/index.ts
@@ -7,6 +7,22 @@ import UserRouter from './users';
 
 const router = Router();
 
+const swaggerOptions = {
+  authAction: {
+    JWT: {
+      name: 'x-api-key',
+      schema: {
+        type: 'apiKey',
+        in: 'header',
+        name: 'x-api-key',
+        description: '',
+      },
+      value: 'Bearer lala',
+    },
+  },
+  customCss: '.swagger-ui .topbar { display: none }',
+};
+
 router.use('/packets', PacketRouter);
 router.use('/auth', AuthRouter);
 router.use('/user', UserRouter);
@@ -14,12 +30,7 @@ router.use('/user', UserRouter);
 // Dev routes
 if (process.env.NODE_ENV === 'development') {
   router.use('/dev/api-docs', swaggerUi.serve);
-  router.get(
-    '/dev/api-docs',
-    swaggerUi.setup(apiSpec, {
-      customCss: '.swagger-ui .topbar { display: none }',
-    }),
-  );
+  router.get('/dev/api-docs', swaggerUi.setup(apiSpec, swaggerOptions));
 }
 
 export default router;
